--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "debug": "^2.1.3",
     "lodash": "^3.5.0",
     "minimist": "^1.1.1",
+    "progress": "^1.1.8",
     "superagent": "^1.1.0"
   }
 }
